--- a/documentation/manual/home.textile
+++ b/documentation/manual/home.textile
@@ -9,15 +9,51 @@ h3. Getting started
 
 To installl Deadbolt, you can use the modules repository:
 
-bc. play install deadbolt-0.1
+bc. play install deadbolt-<required version>
+
+
+h3. Examples
+
+Check the samples-and-tests folder for examples of all the code required below.
+
 
 h3. Identifying the current user
 
 In order to know if access to a view or controller is authorised, you need to know who the current user is.  Because various applications will have their own concept of a user, Deadbolt defines the models.deadbolt.RoleHolder interface.  This interface should be implemented by any class type that represents an object that will try to access a controller method or view.
 
+bc. package models;
+import models.deadbolt.Role;
+import models.deadbolt.RoleHolder;
+import java.util.Arrays;
+import java.util.List;
+public class MyRoleHolder implements RoleHolder
+{
+    public List<? extends Role> getRoles()
+    {
+        return Arrays.asList(new MyRole("foo"),
+                             new MyRole("bar"),
+                             new MyRole("restricted"));
+    }
+}
+
 Once a RoleHolder has been implemented, it can return a list of models.deadbolt.Role objects to indicate which roles a RoleHolder has.  Again, Role is an interface and so should not intrude on your application's model architecture.
 
-In a move taken directly from the Secure module, you define the hooks into your application by extending a static inner class of Deadbolt - RoleHolderAccessor.  This class has two key methods -
+bc. package models;
+import models.deadbolt.Role;
+public class MyRole implements Role
+{
+    private String name;
+    public MyRole(String name)
+    {
+        this.name = name;
+    }
+    public String getRoleName()
+    {
+        return name;
+    }
+}
+
+In a move taken directly from the Secure module, you define the hooks into your application by extending a static inner class of Deadbolt - DeadboltHandler.  This class has two key methods -
 
 bc. static RoleHolder getRoleHolder()
 
@@ -26,6 +62,8 @@ getRoleHolder() should return the current user, which must implement the models.
 bc. static void onAccessFailure(Class<? extends Controller> controllerClass)
 
 onAccessFailure(Class) should handle the what happens following an unauthorised attempt to access a secured controller method.
+
+A further method, getExternalizedRestrictionsAccessor() can be implemented if you are supported externalised restriction trees.
 
 
 h3. Securing controllers
@@ -39,6 +77,7 @@ Rolenames are matched against result of the Role.getRoleName() method of the rol
 
 There are two annotations available to define access to a controller method - @Restrict, and @Restrictions.
 
+
 h3. @Restrict
 
 The @Restrict annotation defines a set of role names that are ANDed together.
@@ -51,6 +90,7 @@ bc. // This restricts access to the list method to any role holder with both "fo
 @Restrict({"foo", "bar"})
 public static void list()
 
+
 h3. @Restrictions
 
 The @Restrictions annotation defines a set of @Restricts that are ORed together.
@@ -60,7 +100,7 @@ bc. // This restricts access to the list method to any role holder with a role w
 public static void list()
 
 bc. // This restricts access to the list method to any role holder with the "foo" role, or roles whose names are "bar" AND "gee".  Note that a role holder with a "bar" OR a "gee" role will be denied access.
-@Restrictions({@Restrict("foo"), @Restrict("bar", "gee")})
+@Restrictions({@Restrict("foo"), @Restrict({"bar", "gee"})})
 public static void list()
 
 
@@ -85,7 +125,7 @@ h3. Negating role names
 
 By prefixing a rolename with ! you state the method or view is inaccessible to any role holder with that role.
 
-bc. // This restricts access to the list method to any role holder with a "foo" role but no "bar" role.  If a "bar" role is present, access is denied.
+bc. This restricts access to the list method to any role holder with a "foo" role but no "bar" role.  If a "bar" role is present, access is denied.
 @Restrict({"foo", "!bar"})
 public static void list()
 
@@ -109,3 +149,56 @@ bc. #{deadbolt.restrict roles:[['foo', 'bar', 'gee']]}
     something else
 #{/deadbolt.restrict}
 
+
+h3. Externalised restrictions
+
+Deadbolt allows you to annotation controller classes and methods with named restriction trees.
+
+bc. @ExternalRestrictions("admin-only")
+public static void edit()
+
+bc. @ExternalRestrictions({"admin", "super-mega-admin"})
+public static void edit()
+
+This annotation maps to an externalised restriction - again a combination of ANDs, ORs and NOTs - and so allows you to
+define standard security schemes than can be changed at the e.g. database level.
+
+Each name passed to the annotation, e.g. admin and super-mega-admin in the example above, maps to an ExternalizedRestrictions
+instance.  The results of these instances are OR'd together.  Each ExternalizedRestrictions instance has a list of ExternalizedRestriction
+instances - each of these instances is also OR'd together.  Finally, each ExternalizedRestriction has a list of role names - these are ANDed together, and also support role name
+negation.
+
+Below is an example implementation of an ExternalizedRestrictionsAccessor.
+
+bc. import controllers.deadbolt.ExternalizedRestrictionsAccessor;
+import models.deadbolt.ExternalizedRestrictions;
+import java.util.HashMap;
+import java.util.Map;
+public class MyExternalizedRestrictionsAccessor implements ExternalizedRestrictionsAccessor
+{
+    private final Map<String, ExternalizedRestrictions> restrictions = new HashMap<String, ExternalizedRestrictions>();
+    public MyExternalizedRestrictionsAccessor()
+    {
+        restrictions.put("standard",
+                         new MyExternalizedRestrictions(new MyExternalizedRestriction("foo"),
+                                                        new MyExternalizedRestriction("bar")));
+        restrictions.put("one-role-missing",
+                         new MyExternalizedRestrictions(new MyExternalizedRestriction("foo"),
+                                                        new MyExternalizedRestriction("rab")));
+        restrictions.put("admin",
+                         new MyExternalizedRestrictions(new MyExternalizedRestriction("admin")));
+        restrictions.put("exclude-restricted",
+                         new MyExternalizedRestrictions(new MyExternalizedRestriction("!restricted")));
+    }
+    public ExternalizedRestrictions getExternalizedRestrictions(String name)
+    {
+        return restrictions.get(name);
+    }
+}
+
+h3. Mixing annotations
+
+The annotations detailed above can be applied in combination to controller classes and fields.  The evaluation is ANDed and the order is
+* Restrict
+* Restrictions
+* ExternalRestrictions
